--- a/index.html
+++ b/index.html
@@ -97,10 +97,10 @@
             <h2 class="text-3xl font-bold text-center text-brown mb-4">Confirmation de présence</h2>
             <div class="bg-white p-8 rounded-lg shadow-lg max-w-md mx-auto">
                 <p class="text-gray-700 mb-4 text-center">Merci de nous confirmer votre présence avant le 1er mai 2026.</p>
-                <form class="space-y-4">
+                <form action="https://getform.io/f/aqoevqma" method="POST" class="space-y-4">
                     <div>
                         <label for="name" class="block text-sm font-medium text-gray-700">Votre nom :</label>
-                        <input type="text" id="name" name="name" class="mt-1 block w-full rounded-md border-gray-300 shadow-sm focus:border-brown focus:ring-brown sm:text-sm">
+                        <input type="text" id="name" name="nom" class="mt-1 block w-full rounded-md border-gray-300 shadow-sm focus:border-brown focus:ring-brown sm:text-sm">
                     </div>
                     <div>
                         <label for="presence" class="block text-sm font-medium text-gray-700">Serez-vous présent ?</label>
@@ -114,6 +114,7 @@
                         <label for="message" class="block text-sm font-medium text-gray-700">Un petit mot pour nous ? (facultatif)</label>
                         <textarea id="message" name="message" rows="3" class="mt-1 block w-full rounded-md border-gray-300 shadow-sm focus:border-brown focus:ring-brown sm:text-sm"></textarea>
                     </div>
+                    <input type="hidden" name="_subject" value="RSVP Mariage Marie & Lucas">
                     <div class="text-center">
                         <button type="submit" class="inline-block bg-white text-brown font-bold py-2 px-6 rounded-full shadow-lg border-2 border-brown hover:bg-gray-100 transition-colors">
                             Confirmer
