--- a/index.html
+++ b/index.html
@@ -68,18 +68,18 @@
             <div class="grid grid-cols-1 md:grid-cols-2 gap-6">
                 <div class="bg-white p-6 rounded-lg shadow-lg">
                     <h3 class="text-xl font-bold text-brown mb-2">15h00 - La cérémonie</h3>
-                    <p class="text-gray-700">Mairie de Speloncato</p>
-                    <p class="text-sm text-gray-500 mt-2">Village de Speloncato, Corse</p>
+                    <p class="text-gray-700">Église de Speloncato</p>
+                    <a href="https://maps.google.com/?q=Église de Speloncato, Corse, France" target="_blank" class="text-sm text-brown hover:underline">Voir sur la carte</a>
                 </div>
                 <div class="bg-white p-6 rounded-lg shadow-lg">
                     <h3 class="text-xl font-bold text-brown mb-2">17h00 - Le cocktail</h3>
                     <p class="text-gray-700">Place du village de Speloncato</p>
-                    <p class="text-sm text-gray-500 mt-2">Profitez d'un moment de convivialité sur la place pittoresque du village.</p>
+                    <a href="https://maps.google.com/?q=Place du village, Speloncato, Corse, France" target="_blank" class="text-sm text-brown hover:underline">Voir sur la carte</a>
                 </div>
                 <div class="bg-white p-6 rounded-lg shadow-lg">
                     <h3 class="text-xl font-bold text-brown mb-2">20h00 - Dîner & Soirée</h3>
                     <p class="text-gray-700">Domaine du Reginu</p>
-                    <p class="text-sm text-gray-500 mt-2">La fête se poursuivra au domaine pour un dîner suivi d'une soirée dansante !</p>
+                    <a href="https://maps.google.com/?q=Domaine du Reginu, Corse, France" target="_blank" class="text-sm text-brown hover:underline">Voir sur la carte</a>
                 </div>
                 <div class="bg-white p-6 rounded-lg shadow-lg">
                     <h3 class="text-xl font-bold text-brown mb-2">Dimanche 20 Septembre</h3>
@@ -108,6 +108,17 @@
                             <option value="">Sélectionnez une option</option>
                             <option value="oui">Oui, je serai là !</option>
                             <option value="non">Non, je ne pourrai pas venir</option>
+                        </select>
+                    </div>
+                    <div>
+                        <label for="invite-count" class="block text-sm font-medium text-gray-700">Nombre de personnes qui vous accompagneront :</label>
+                        <select id="invite-count" name="invite_count" class="mt-1 block w-full rounded-md border-gray-300 shadow-sm focus:border-brown focus:ring-brown sm:text-sm">
+                            <option value="0">0</option>
+                            <option value="1">1</option>
+                            <option value="2">2</option>
+                            <option value="3">3</option>
+                            <option value="4">4</option>
+                            <option value="5">5</option>
                         </select>
                     </div>
                     <div>
@@ -157,15 +168,16 @@
                     <h3 class="text-xl font-bold text-brown mb-2">Liste de mariage</h3>
                     <p class="text-gray-700">Votre présence est notre plus beau cadeau. Si vous souhaitez néanmoins nous gâter, vous pouvez participer à notre cagnotte en ligne. La cagnotte est pour notre voyage de noces en safari !</p>
                     <div class="text-center mt-4">
-                        <a href="https://www.leetchi.com/fr/cagnotte-de-mariage" target="_blank" class="inline-block bg-white text-brown font-bold py-2 px-6 rounded-full shadow-lg border-2 border-brown hover:bg-gray-100 transition-colors">Accéder à la cagnotte</a>
+                        <a href="https://www.onparticipe.fr/" target="_blank" class="inline-block bg-white text-brown font-bold py-2 px-6 rounded-full shadow-lg border-2 border-brown hover:bg-gray-100 transition-colors">Accéder à la cagnotte</a>
                     </div>
                 </div>
                 <div class="bg-white p-6 rounded-lg shadow-lg">
                     <h3 class="text-xl font-bold text-brown mb-2">Contact</h3>
                     <p class="text-gray-700">Pour toute question, n'hésitez pas à nous contacter :</p>
                     <ul class="list-disc list-inside mt-2 text-gray-700">
-                        <li>Marie : 06 XX XX XX XX</li>
-                        <li>Lucas : 06 YY YY YY YY</li>
+                        <li>Marie : 06 27 96 17 25</li>
+                        <li>Lucas : 06 87 20 63 00</li>
+                        <li>Wedding planner Matea : Pas de numéro de téléphone pour le moment.</li>
                     </ul>
                 </div>
             </div>
