--- a/index.html
+++ b/index.html
@@ -29,8 +29,8 @@
         <header class="text-center mb-6">
             <h1 class="text-5xl font-bold text-brown mb-2">Marie & Lucas</h1>
             <p class="text-xl italic">Nous nous marions !</p>
-            <p class="mt-2 text-lg">Nous sommes ravis de vous inviter à célébrer notre union le</p>
-            <p class="text-2xl font-bold mt-1 text-brown">Samedi 19 Septembre 2026</p>
+            <p class="mt-2 text-lg">Nous sommes ravis de vous inviter à célébrer notre union les</p>
+            <p class="text-2xl font-bold mt-1 text-brown">Samedi 19 et Dimanche 20 Septembre 2026</p>
         </header>
 
         <!-- Séparateur -->
@@ -67,23 +67,25 @@
             <h2 class="text-3xl font-bold text-center text-brown mb-4">Le Programme</h2>
             <div class="grid grid-cols-1 md:grid-cols-2 gap-6">
                 <div class="bg-white p-6 rounded-lg shadow-lg">
-                    <h3 class="text-xl font-bold text-brown mb-2">15h00 - La cérémonie</h3>
+                    <h3 class="text-xl font-bold text-brown mb-2">Samedi 19 septembre - 15h00 - La cérémonie</h3>
                     <p class="text-gray-700">Église de Speloncato</p>
                     <a href="https://maps.google.com/?q=Église de Speloncato, Corse, France" target="_blank" class="text-sm text-brown hover:underline">Voir sur la carte</a>
                 </div>
                 <div class="bg-white p-6 rounded-lg shadow-lg">
-                    <h3 class="text-xl font-bold text-brown mb-2">17h00 - Le cocktail</h3>
+                    <h3 class="text-xl font-bold text-brown mb-2">Samedi 19 septembre - 17h00 - Le cocktail</h3>
                     <p class="text-gray-700">Place du village de Speloncato</p>
                     <a href="https://maps.google.com/?q=Place du village, Speloncato, Corse, France" target="_blank" class="text-sm text-brown hover:underline">Voir sur la carte</a>
                 </div>
                 <div class="bg-white p-6 rounded-lg shadow-lg">
-                    <h3 class="text-xl font-bold text-brown mb-2">20h00 - Dîner & Soirée</h3>
+                    <h3 class="text-xl font-bold text-brown mb-2">Samedi 19 septembre - 20h00 - Dîner & Soirée</h3>
                     <p class="text-gray-700">Domaine du Reginu</p>
-                    <a href="https://maps.google.com/?q=Domaine du Reginu, Corse, France" target="_blank" class="text-sm text-brown hover:underline">Voir sur la carte</a>
+                    <a href="https://maps.google.com/?q=Domaine du Reginu, Route du Reginu, 20220 Speloncato, Corse, France" target="_blank" class="text-sm text-brown hover:underline">Route du Reginu, 20220 Speloncato</a>
+                    <p class="text-sm text-gray-500 mt-2">La fête se poursuivra au domaine pour un dîner suivi d'une soirée dansante !</p>
                 </div>
                 <div class="bg-white p-6 rounded-lg shadow-lg">
-                    <h3 class="text-xl font-bold text-brown mb-2">Dimanche 20 Septembre</h3>
+                    <h3 class="text-xl font-bold text-brown mb-2">Dimanche 20 Septembre - Brunch</h3>
                     <p class="text-gray-700">Brunch au Domaine du Reginu</p>
+                    <a href="https://maps.google.com/?q=Domaine du Reginu, Route du Reginu, 20220 Speloncato, Corse, France" target="_blank" class="text-sm text-brown hover:underline">Route du Reginu, 20220 Speloncato</a>
                     <p class="text-sm text-gray-500 mt-2">Nous vous invitons à nous rejoindre pour un brunch décontracté avant de vous dire au revoir.</p>
                 </div>
             </div>
@@ -142,6 +144,11 @@
         <section class="mb-6">
             <h2 class="text-3xl font-bold text-center text-brown mb-4">Informations Pratiques</h2>
             <div class="space-y-6">
+                <div class="bg-white p-6 rounded-lg shadow-lg">
+                    <h3 class="text-xl font-bold text-brown mb-2">La tenue</h3>
+                    <p class="text-gray-700 mb-2">Pour le dîner et la soirée, la tenue sera élégante.</p>
+                    <p class="text-gray-700">Pour le brunch du dimanche, nous vous invitons à porter du blanc.</p>
+                </div>
                 <div class="bg-white p-6 rounded-lg shadow-lg">
                     <h3 class="text-xl font-bold text-brown mb-2">Hébergement</h3>
                     <p class="text-gray-700 mb-2">Voici quelques suggestions d'hôtels et de résidences à proximité du Domaine du Reginu. Pour les photos et plus de détails, cliquez sur les liens ci-dessous :</p>
