--- a/index.html
+++ b/index.html
@@ -72,20 +72,22 @@
                     <a href="https://maps.google.com/?q=Église de Speloncato, Corse, France" target="_blank" class="text-sm text-brown hover:underline">Voir sur la carte</a>
                 </div>
                 <div class="bg-white p-6 rounded-lg shadow-lg">
-                    <h3 class="text-xl font-bold text-brown mb-2">Samedi 19 septembre - 17h00 - Le cocktail</h3>
+                    <h3 class="text-xl font-bold text-brown mb-2">Samedi 19 septembre - 16h00 - Le cocktail</h3>
                     <p class="text-gray-700">Place du village de Speloncato</p>
                     <a href="https://maps.google.com/?q=Place du village, Speloncato, Corse, France" target="_blank" class="text-sm text-brown hover:underline">Voir sur la carte</a>
                 </div>
                 <div class="bg-white p-6 rounded-lg shadow-lg">
-                    <h3 class="text-xl font-bold text-brown mb-2">Samedi 19 septembre - 20h00 - Dîner & Soirée</h3>
+                    <h3 class="text-xl font-bold text-brown mb-2">Samedi 19 septembre - 18h00 - Dîner & Soirée</h3>
+                    <p class="text-sm italic text-gray-600 mb-1">(Tenue élégante)</p>
                     <p class="text-gray-700">Domaine du Reginu</p>
-                    <a href="https://maps.google.com/?q=Domaine du Reginu, Route du Reginu, 20220 Speloncato, Corse, France" target="_blank" class="text-sm text-brown hover:underline">Route du Reginu, 20220 Speloncato</a>
+                    <a href="https://maps.google.com/?q=Domaine du Reginu, Route du Reginu, 20220 Speloncato, Corse, France" target="_blank" class="text-sm text-brown hover:underline">Voir sur la carte</a>
                     <p class="text-sm text-gray-500 mt-2">La fête se poursuivra au domaine pour un dîner suivi d'une soirée dansante !</p>
                 </div>
                 <div class="bg-white p-6 rounded-lg shadow-lg">
-                    <h3 class="text-xl font-bold text-brown mb-2">Dimanche 20 Septembre - Brunch</h3>
+                    <h3 class="text-xl font-bold text-brown mb-2">Dimanche 20 Septembre - 12h00 - Brunch</h3>
+                    <p class="text-sm italic text-gray-600 mb-1">(Tenue blanche)</p>
                     <p class="text-gray-700">Brunch au Domaine du Reginu</p>
-                    <a href="https://maps.google.com/?q=Domaine du Reginu, Route du Reginu, 20220 Speloncato, Corse, France" target="_blank" class="text-sm text-brown hover:underline">Route du Reginu, 20220 Speloncato</a>
+                    <a href="https://maps.google.com/?q=Domaine du Reginu, Route du Reginu, 20220 Speloncato, Corse, France" target="_blank" class="text-sm text-brown hover:underline">Voir sur la carte</a>
                     <p class="text-sm text-gray-500 mt-2">Nous vous invitons à nous rejoindre pour un brunch décontracté avant de vous dire au revoir.</p>
                 </div>
             </div>
@@ -145,31 +147,56 @@
             <h2 class="text-3xl font-bold text-center text-brown mb-4">Informations Pratiques</h2>
             <div class="space-y-6">
                 <div class="bg-white p-6 rounded-lg shadow-lg">
-                    <h3 class="text-xl font-bold text-brown mb-2">La tenue</h3>
-                    <p class="text-gray-700 mb-2">Pour le dîner et la soirée, la tenue sera élégante.</p>
-                    <p class="text-gray-700">Pour le brunch du dimanche, nous vous invitons à porter du blanc.</p>
+                    <h3 class="text-xl font-bold text-brown mb-2">Transport</h3>
+                    <p class="text-gray-700">
+                        Pour vous rendre sur place, l'aéroport le plus proche est celui de Calvi. Nous vous suggérons ensuite de louer une voiture pour vous déplacer librement sur l'île. Vous pouvez réserver votre véhicule en même temps que vos billets d'avion, ou passer par une grande compagnie comme Sixt, Hertz ou Europcar.
+                    </p>
                 </div>
                 <div class="bg-white p-6 rounded-lg shadow-lg">
                     <h3 class="text-xl font-bold text-brown mb-2">Hébergement</h3>
-                    <p class="text-gray-700 mb-2">Voici quelques suggestions d'hôtels et de résidences à proximité du Domaine du Reginu. Pour les photos et plus de détails, cliquez sur les liens ci-dessous :</p>
-                    <ul class="list-disc list-inside text-gray-700 space-y-2">
-                        <li>
-                            <a href="https://www.apiattatella.fr/" target="_blank" class="font-bold text-brown hover:underline">Hotel A Piattatella</a>
-                            <p class="text-sm text-gray-500">Un hôtel de luxe avec une vue imprenable sur la vallée du Reginu.</p>
-                        </li>
-                        <li>
-                            <a href="https://oradoro-residence-corse.com/" target="_blank" class="font-bold text-brown hover:underline">Résidence Oradoro</a>
-                            <p class="text-sm text-gray-500">Une résidence au cœur de la Balagne, avec une piscine et un jardin.</p>
-                        </li>
-                        <li>
-                            <a href="https://www.casaparadisu.fr/" target="_blank" class="font-bold text-brown hover:underline">Casa Paradisu</a>
-                            <p class="text-sm text-gray-500">Un hôtel de charme situé près de L'Île-Rousse.</p>
-                        </li>
-                        <li>
-                            <a href="https://www.hotelcorsica.fr/" target="_blank" class="font-bold text-brown hover:underline">Hôtel Corsica & Spa Serena</a>
-                            <p class="text-sm text-gray-500">Un hôtel 5 étoiles situé sur les hauteurs de Calvi.</p>
-                        </li>
-                    </ul>
+                    <p class="text-gray-700 mb-2">Voici quelques suggestions d'hôtels et de résidences à proximité. Cliquez sur les noms pour visiter leur site et sur "voir sur la carte" pour les localiser :</p>
+                    <div class="grid grid-cols-1 md:grid-cols-2 gap-4">
+                        <div>
+                            <p class="font-bold text-brown">Speluncatu</p>
+                            <a href="https://www.hotel-a-spelunca.com" target="_blank" class="font-bold text-brown hover:underline">Hôtel a Spelunca di u Sechju</a><br>
+                            <a href="https://maps.google.com/?q=Hôtel a Spelunca di u Sechju, Speloncato" target="_blank" class="text-sm text-brown hover:underline">Voir sur la carte</a>
+                        </div>
+                        <div>
+                            <p class="font-bold text-brown">Nessa</p>
+                            <a href="https://www.airbnb.fr/s/homes?c%5B%5D=.pi0.pk22863554538_180465679661&c%5B%5D=.pi0.pk22863554538_180465679661&gclsrc=aw.ds&sem_automaid=true&gad_source=1&gad_campaignid=22863554538&gbraid=0AAAAADz55LmTLm3kdCUtUNZnuwB0CoJGV&dynamic_product_ids%5B%5D=26600276&omni_page_id=27964" target="_blank" class="font-bold text-brown hover:underline">Résidences Airbnb</a><br>
+                            <a href="https://maps.google.com/?q=Nessa, Corse, France" target="_blank" class="text-sm text-brown hover:underline">Voir sur la carte</a>
+                        </div>
+                        <div>
+                            <p class="font-bold text-brown">Felicetu</p>
+                            <a href="https://www.hotel-maremonti.com" target="_blank" class="font-bold text-brown hover:underline">Hôtel Maremonti</a><br>
+                            <a href="https://maps.google.com/?q=Hôtel Maremonti, Feliceto, France" target="_blank" class="text-sm text-brown hover:underline">Voir sur la carte</a>
+                        </div>
+                        <div>
+                            <p class="font-bold text-brown">Lozari</p>
+                            <a href="https://bergeries-de-pinelli.corsica" target="_blank" class="font-bold text-brown hover:underline">Bergeries de Pinelli</a><br>
+                            <a href="https://maps.google.com/?q=Bergeries de Pinelli, Lozari, France" target="_blank" class="text-sm text-brown hover:underline">Voir sur la carte</a>
+                        </div>
+                        <div>
+                            <p class="font-bold text-brown">Lozari</p>
+                            <a href="https://oradoro-residence-corse.com" target="_blank" class="font-bold text-brown hover:underline">Résidence Oradoro</a><br>
+                            <a href="https://maps.google.com/?q=Résidence Oradoro, Lozari, France" target="_blank" class="text-sm text-brown hover:underline">Voir sur la carte</a>
+                        </div>
+                        <div>
+                            <p class="font-bold text-brown">Île-Rousse</p>
+                            <a href="https://www.hotelsantamaria.com" target="_blank" class="font-bold text-brown hover:underline">Best Western Hôtel Santa Maria</a><br>
+                            <a href="https://maps.google.com/?q=Best Western Hôtel Santa Maria, Île-Rousse, France" target="_blank" class="text-sm text-brown hover:underline">Voir sur la carte</a>
+                        </div>
+                        <div>
+                            <p class="font-bold text-brown">Île-Rousse</p>
+                            <a href="https://www.hotel-casarossa.com" target="_blank" class="font-bold text-brown hover:underline">Hôtel Casa Rossa</a><br>
+                            <a href="https://maps.google.com/?q=Hôtel Casa Rossa, Île-Rousse, France" target="_blank" class="text-sm text-brown hover:underline">Voir sur la carte</a>
+                        </div>
+                        <div>
+                            <p class="font-bold text-brown">Île-Rousse</p>
+                            <a href="https://www.hotel-lapietra.com" target="_blank" class="font-bold text-brown hover:underline">Hôtel La Pietra</a><br>
+                            <a href="https://maps.google.com/?q=Hôtel La Pietra, Île-Rousse, France" target="_blank" class="text-sm text-brown hover:underline">Voir sur la carte</a>
+                        </div>
+                    </div>
                 </div>
                 <div class="bg-white p-6 rounded-lg shadow-lg">
                     <h3 class="text-xl font-bold text-brown mb-2">Liste de mariage</h3>
