--- a/index.html
+++ b/index.html
@@ -28,7 +28,7 @@
         <!-- Section d'accueil -->
         <header class="text-center mb-6">
             <h1 class="text-5xl font-bold text-brown mb-2">Marie & Lucas</h1>
-            <p class="text-xl italic">Nous nous marions !</p>
+            <p class="text-xl italic">Nous nous marions en Corse !</p>
             <p class="mt-2 text-lg">Nous sommes ravis de vous inviter à célébrer notre union les</p>
             <p class="text-2xl font-bold mt-1 text-brown">Samedi 19 et Dimanche 20 Septembre 2026</p>
         </header>
@@ -201,6 +201,7 @@
                 <div class="bg-white p-6 rounded-lg shadow-lg">
                     <h3 class="text-xl font-bold text-brown mb-2">Liste de mariage</h3>
                     <p class="text-gray-700">Votre présence est notre plus beau cadeau. Si vous souhaitez néanmoins nous gâter, vous pouvez participer à notre cagnotte en ligne. La cagnotte est pour notre voyage de noces en safari !</p>
+                    <p class="text-gray-700 mt-2">Une boîte sera également à votre disposition le jour du mariage si vous souhaitez y déposer votre participation.</p>
                     <div class="text-center mt-4">
                         <a href="https://www.onparticipe.fr/" target="_blank" class="inline-block bg-white text-brown font-bold py-2 px-6 rounded-full shadow-lg border-2 border-brown hover:bg-gray-100 transition-colors">Accéder à la cagnotte</a>
                     </div>
